# ndl-core-data-pipeline

./: .gitignore  README.md  pyproject.toml
docs/: developer_guide.md
src/ndl_core_data_pipeline/: definitions.py
src/ndl_core_data_pipeline/assets/: __init__.py
src/ndl_core_data_pipeline/assets/cleaning/: assets.py
src/ndl_core_data_pipeline/assets/data_gov_uk/: assets.py
src/ndl_core_data_pipeline/assets/gov_uk/: assets.py
src/ndl_core_data_pipeline/assets/hansard_parliament_uk/: README.md  parser.py
src/ndl_core_data_pipeline/assets/legislation_gov_uk/: assets.py
src/ndl_core_data_pipeline/assets/ons_gov_uk/: assets.py
src/ndl_core_data_pipeline/assets/processing/: assets.py  hugginface_structured_uploader.py
src/ndl_core_data_pipeline/assets/rag/: __init__.py  create_lancedb_index.py  hugginface_uploader.py  process_text_chunks.py  test_lancedb_search.py
src/ndl_core_data_pipeline/resources/: api_client.py  count_extensions.py  html_extractor.py  time_utils.py  token_counter.py
src/ndl_core_data_pipeline/resources/convertors/: __init__.py  csv_to_parquet.py  html_extractor.py  json_to_parquet.py  pdf_extractor.py  spreadsheet_to_parquet.py
src/ndl_core_data_pipeline/resources/embedding/: eu_data_themes.py  eu_theme_classifier.py  rag_search.py
src/ndl_core_data_pipeline/resources/refine/: anonymizer.py  dedupe.py
tests/: all_tests.py
tests/resources/: __init__.py  test_anonymizer.py  test_api_client.py  test_csv_to_parquet.py  test_dedupe.py  test_eu_theme_classifier.py  test_html_extractor_unittest.py  test_json_to_parquet.py  test_pdf_extractor_unittest.py  test_spreadsheet_to_parquet.py  test_time_utils.py  test_token_counter.py
tests/test_data/: 1d23678b-a09d-4e75-9093-3eea98a44ee5.ods  big_json.json  fa686e0d-06d0-4ccc-a0b0-c09dd87db460.ashx  gov_uk.json  legislation.json  multiple_sheets.xlsx  multiple_sheets_complex.xlsx  ons_gov_uk_failed.csv  simple.csv  simple_csv2.csv  simple_json.json
