[project]
name = "ndl-core-data-pipeline"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ndl_core_data_pipeline"
#registry_modules = [
#    "ndl_core_data_pipeline.components.*",
#]


