[project]
name = "ndl-core-data-pipeline"
requires-python = ">=3.11,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.5",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.26.7",
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "pillow>=9.0.0",
    "pyarrow>=22.0.0",
    "odfpy>=1.4.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ndl_core_data_pipeline"
#registry_modules = [
#    "ndl_core_data_pipeline.components.*",
#]
