[project]
name = "ndl-core-data-pipeline"
requires-python = ">=3.12,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.5",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.26.7",
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "pillow>=9.0.0",
    "pyarrow>=22.0.0",
    "odfpy>=1.4.1",
    "tqdm>=4.67.1",
    "sentence-transformers>=5.2.0",
    "faiss-cpu>=1.13.2",
    "langdetect>=1.0.9",
    "tiktoken>=0.12.0",
    "charset-normalizer>=3.4.4",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.8.11",
    "download>=0.3.5",
    "en-core-web-lg",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ndl_core_data_pipeline"

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
#registry_modules = [
#    "ndl_core_data_pipeline.components.*",
#]
